--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,22 @@
 {
     "parser": "babel-eslint",
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
     "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
         "plugin:react-hooks/recommended",
         "airbnb"
     ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
     "plugins": [
         "react",
         "react-hooks"
